force-app/main/default/objects/pse__Skill_Certification_Zone__c/pse__Skill_Certification_Zone__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__SkillCertificationZoneHelp</customHelpPage>
    <description>Identifies a region, practice, or group under which resources may be rated for a skill.</description>
    <label>Skill / Certification Zone</label>
    <nameField>
        <displayFormat>SZ-{0}</displayFormat>
        <label>Skill / Certification Zone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill / Certification Zones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>