force-app/main/default/objects/pse__Skill_Certification_Zone__c/fields/pse__Cascading__c.field-meta.xml
<CustomField>
    <fullName>pse__Cascading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cascading</label>
    <type>Checkbox</type>
</CustomField>