force-app/main/default/objects/pse__Skill_Certification_Zone__c/fields/pse__Practice__c.field-meta.xml
<CustomField>
    <fullName>pse__Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Skill / Certification Zones</relationshipLabel>
    <relationshipName>Skill_Certification_Zones</relationshipName>
    <type>Lookup</type>
</CustomField>