force-app/main/default/objects/pse__Skill_Certification_Zone__c/fields/pse__Skill_Certification__c.field-meta.xml
<CustomField>
    <fullName>pse__Skill_Certification__c</fullName>
    <label>Skill / Certification</label>
    <referenceTo>pse__Skill__c</referenceTo>
    <relationshipLabel>Skill / Certification Zones</relationshipLabel>
    <relationshipName>Skill_Certification_Zones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>